k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: memorycachesynthetictest
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: memorycachesynthetictest.cloud.insitehq.net
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: memorycachesynthetictest
  namespace: memorycachesynthetictest
spec:
  rules:
  - host: memorycachesynthetictest.cloud.insitehq.net
    http:
      paths:
      - backend:
          service:
            name: memorycachesynthetictest
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: memorycachesynthetictest
  namespace: memorycachesynthetictest
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: memorycachesynthetictest
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tags.datadoghq.com/env: b2bcommerce-internal
    tags.datadoghq.com/service: memorycachesynthetictest
    tags.datadoghq.com/version: latest
  name: memorycachesynthetictest
  namespace: memorycachesynthetictest
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: memorycachesynthetictest
      app.kubernetes.io/name: memorycachesynthetictest
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: memorycachesynthetictest
        app.kubernetes.io/name: memorycachesynthetictest
        tags.datadoghq.com/env: b2bcommerce-internal
        tags.datadoghq.com/service: memorycachesynthetictest
        tags.datadoghq.com/version: latest
    spec:
      containers:
      - name: memorycachesynthetictest
        image: registry.cloud.insitehq.net/memorycachesynthetictest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 1
            memory: 4096Mi
          # limits:
          #   memory: 4096Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          timeoutSeconds: 30
          periodSeconds: 60
          failureThreshold: 10
      imagePullSecrets:
      - name: regcred
      nodeSelector:
        kubernetes.io/os: windows
